src/test/resources/tests/27_error_null_access.expected
Runtime error: Runtime Error at line 3:6: Cannot access property 'name' of null
