src/test/resources/tests/27_error_null_access.pt
// Test: Property access on null should error
x = null
PRINT(x.name)
